<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CoursePage">

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/parks"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_course"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00000000"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_but" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/master"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="5dp"
        android:text="@string/desc"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/text"
        android:layout_width="351dp"
        android:layout_height="98dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <ImageView
        android:id="@+id/top"
        android:layout_width="130dp"
        android:layout_height="170dp"
        android:layout_marginEnd="-5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/course_top" />

    <ImageView
        android:id="@+id/down"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginStart="-10dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/course_top" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="10dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/main_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintitle"
        app:srcCompat="@drawable/redline" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maintitle"
        app:srcCompat="@drawable/ic_master" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        app:srcCompat="@drawable/b1" />

    <ImageButton
        android:id="@+id/lovest"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/reviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:srcCompat="@drawable/in_lovest" />

    <ImageButton
        android:id="@+id/reviews"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/geo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lovest"
        app:srcCompat="@drawable/reviews" />

    <ImageButton
        android:id="@+id/geo"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="100dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviews"
        app:srcCompat="@drawable/geolocation" />

</androidx.constraintlayout.widget.ConstraintLayout>